--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,90 +1,37 @@
 <main>
-
     <section id="section-banner">
-
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bsride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/banner1.PNG" class="d-block w-100" alt="banner 1">
+                    <img src="./assets/banner1.PNG" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/banner2.PNG" class="d-block w-100" alt="Banner 2">
+                    <img src="./assets/banner2.PNG" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/banner3.PNG" class="d-block w-100" alt="Banner 3">
+                    <img src="./assets/banner3.PNG" class="d-block w-100" alt="...">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
-
     </section>
-    
-    <h2>Promoções Jogos</h2>
     <mat-grid-list cols="3">
-
-        <mat-grid-tile>
+        <mat-grid-tile *ngFor="let produto of produtos">
             <mat-card class="example-card">
-                <img mat-card-image src="./assets/jogo1.PNG" alt="jogo 1">
+                <img mat-card-image src="./assets/{{produto.foto}}" alt="produto">
                 <mat-card-header>
-                    <mat-card-title>Jogo de Ação</mat-card-title>
+                    <mat-card-title>{{produto.produto}}</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
                     <p>
-                        Descrição do jogo de ação.
+                        {{produto.descricao}}
                     </p>
-                </mat-card-content>
-                <mat-card-actions>
-                    <p>R$ 200,00</p>
-                    <button mat-button>comprar</button>
-                </mat-card-actions>
-            </mat-card>
-        </mat-grid-tile>
-            
-        <mat-grid-tile>
-            <mat-card class="example-card">
-                <img mat-card-image src="./assets/jogo2.PNG" alt="jogo 2">
-                <mat-card-header>
-                    <mat-card-title>Jogo de Aventura</mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
                     <p>
-                        Descrição do jogo de ação.
-                    </p>
                 </mat-card-content>
                 <mat-card-actions>
-                    <p>R$ 125,00</p>
-                    <button mat-button>comprar</button>
+                    <p>{{produto.preco | currency : 'BRL'}}</p>
+                    <button mat-raised-button color="primary">Comprar</button>
                 </mat-card-actions>
             </mat-card>
         </mat-grid-tile>
-
-        <mat-grid-tile>
-            <mat-card class="example-card">
-                <img mat-card-image src="./assets/jogo3.PNG" alt="jogo 3">
-                <mat-card-header>
-                    <mat-card-title>Jogo de Terror</mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <p>
-                        Descrição do jogo de ação.
-                    </p>
-                </mat-card-content>
-                <mat-card-actions>
-                    <p>R$ 150,00</p>
-                    <button mat-button>comprar</button>
-                </mat-card-actions>
-            </mat-card>
-        </mat-grid-tile>
-
     </mat-grid-list>
-
 </main>
